force-app/main/default/objects/myV2MOM__Measure_Team__c/myV2MOM__Measure_Team__c.object-meta.xml
<CustomObject>
    <label>Measure Team</label>
    <nameField>
        <displayFormat>MTM-{0}</displayFormat>
        <label>Measure Member</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Measure Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>