force-app/main/default/objects/myV2MOM__Measure_Team__c/fields/myV2MOM__Current_Value__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Current_Value__c</fullName>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>