force-app/main/default/objects/myV2MOM__Measure_Team__c/fields/myV2MOM__Measure__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Measure__c</fullName>
    <label>Measure</label>
    <referenceTo>myV2MOM__Measure__c</referenceTo>
    <relationshipLabel>Measure Teams</relationshipLabel>
    <relationshipName>Measure_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>