force-app/main/default/objects/myV2MOM__Measure_Team__c/fields/myV2MOM__MeasureTeamChatFeedId__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__MeasureTeamChatFeedId__c</fullName>
    <label>MeasureTeamChatFeedId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>