force-app/main/default/objects/myV2MOM__Measure_Team__c/fields/myV2MOM__Percentage__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Percentage__c</fullName>
    <label>Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>