force-app/main/default/objects/myV2MOM__Measure_Team__c/fields/myV2MOM__Target_Value__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Target_Value__c</fullName>
    <formula>myV2MOM__Measure__r.myV2MOM__Target_Value__c  * myV2MOM__Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>