force-app/main/default/objects/myV2MOM__Measure_Team__c/listViews/myV2MOM__All.listView-meta.xml
<ListView>
    <fullName>myV2MOM__All</fullName>
    <columns>NAME</columns>
    <columns>myV2MOM__Measure__c</columns>
    <columns>myV2MOM__Member__c</columns>
    <columns>myV2MOM__Percentage__c</columns>
    <columns>myV2MOM__Target_Value__c</columns>
    <columns>myV2MOM__Type__c</columns>
    <columns>myV2MOM__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>